re PR tree-optimization/32694 (ICE with long long arithmetic)

PR tree-optimization/32694
	2006-11-08  Roger Sayle  <roger@eyesopen.com>
	* tree-ssa-propagate.c (set_rhs): Verify tcc_comparison the same way
	as tcc_binary.
	* tree-ssa-ccp.c (fold_stmt_r) <COND_EXPR>: Use set_rhs to modify
	the condition after calling fold_binary.

	* gcc.c-torture/compile/20070925-1.c: New test.

From-SVN: r128766