gcc/tree-ssa-ccp.c
@@ -2062,12 +2062,13 @@ fold_stmt_r (tree *expr_p, int *walk_subtrees, void *data)
 	  tem = fold_binary (TREE_CODE (op0), TREE_TYPE (op0),
 			     TREE_OPERAND (op0, 0),
 			     TREE_OPERAND (op0, 1));
-	  set = tem && is_gimple_condexpr (tem);
+	  set = tem && set_rhs (expr_p, tem);
 	  fold_undefer_overflow_warnings (set, fold_stmt_r_data->stmt, 0);
 	  if (set)
-	    TREE_OPERAND (expr, 0) = tem;
-	  t = expr;
-          break;
+	    {
+	      t = *expr_p;
+	      break;
+	    }
         }
 
     default:
